# blugreen

./: .env.example  ACCEPTANCE.md  AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  DELETE_NO_THROW_ZONE_REPORT.md  DEPLOYMENT.md  DEPLOY_FRONTEND_MANUAL.md  FRONTEND_DELETE_FIX_REPORT.md  IMPLEMENTATION_PLAN.md  LAYERS_STATUS.md  NON_GOALS.md  README.md  ROADMAP.md  SCOPE.md  SECURITY.md  STACK.md  VISION.md  WORKFLOWS.md  delete_project_cascade.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/versions/: add_assumption_fields.py  add_cascade_delete_to_foreign_keys.py
backend/app/: config.py  database.py  exception_handlers.py  exceptions.py  main.py
backend/app/agents/: __init__.py  architect.py  backend.py  base.py  frontend.py  infra.py  qa.py  ui_refinement.py  ux.py
backend/app/api/: __init__.py  agents.py  assumption.py  create.py  guided.py  intent.py  loop.py  metrics.py  product.py  project_agents.py  projects.py  projects_delete_v3.py  quality.py  system.py  tasks.py  workflows.py
backend/app/models/: __init__.py  agent.py  execution_loop.py  (+9 more)
backend/tests/: conftest.py  test_agent_runner.py  test_agents.py  test_assume_flow.py  test_assumption.py  test_branch_detection.py  test_cors.py  test_create_flow.py  test_create_flow_e2e.py  test_delete_bulletproof.py  test_delete_no_throw_zone.py  test_delete_project_cors.py  test_delete_structured.py  test_governed_delete.py  test_product.py  test_projects.py  test_quality.py  test_task_title_validation.py  test_tasks.py
(+90 files in other folders)
